# art-agent

./: .env.example  .gitignore  README.md  STUDY_GUIDE.md  hardhat.config.js  main.py  package-lock.json  package.json  prepare.py  program.md  pyproject.toml  start.sh  train.py
art/: config.py  critic.py  data.py  events.py  gallery.py  gas.py  model.py  runner.py  tokenizer.py  trainer.py  utils.py  vlm_critic.py
art/nft/: __init__.py  ipfs.py  mint.py
art/tui/: __init__.py  app.py  audio.py  styles.py
art/tui/widgets/: birth.py  dashboard.py  diversity.py  dna.py  entropy_meter.py  gallery.py  gen_live.py  genwatch.py  header.py  heartbeat.py  log.py  loss_chart.py  motifs.py  pixel_art.py  review.py  timeline.py  wallpaper.py
art/web/: bridge.py  index.html  package-lock.json  package.json  vite.config.js
art/web/public/data/: pieces.json
art/web/scripts/: gen-og-gif.mjs
art/web/src/: connection.js  constants.js  handlers.js  keyboard.js  landing.js  main.js  persist.js  phase.js  state.js  tabs.js
art/web/src/dom/: gallery.js  mural-toolbar.js  spine.js
art/web/src/draw/: confidence.js  embed.js  grid.js  heatmap.js  sparkline.js
art/web/src/mural/: cache.js  controls.js  gameoflife.js  kaleidoscope.js  morphogenesis.js  perfmon.js  reactiondiffusion.js  render.js  sonify.js  timers.js  (+1 more)
contracts/: ArtAgent.sol
scripts/: deploy.js  evaluate.py  export_best.py  export_pieces.py  generate.py  mint_piece.py  review.py  run_overnight.py  train.py  tui.py
test/: test_contract.js
tests/: test_critic.py  test_model.py  test_tokenizer.py
(+6 files in other folders)
